# ellph

./: .gitignore  CMakeLists.txt  README.md  benchmark_stats2.cpp  make_plots.py  run_cpp_only.sh  run_experiment.sh
include/: CauchySimplex.hpp  Ellipsoid.hpp  KFromEllipsoids.hpp  KObjective.hpp  LPClarkson.hpp  LPSeidel.hpp  LPType.hpp  OptimalRadius.hpp  PGD.hpp  RandomEllipsoidGenerator.hpp  SLSQP.hpp  Simplex.hpp
src/: CauchySimplex.cpp  Ellipsoid.cpp  KObjective.cpp  LPClarkson.cpp  LPSeidel.cpp  LPType.cpp  OptimalRadius.cpp  PGD.cpp  RandomEllipsoidGenerator.cpp  SLSQP.cpp  Simplex.cpp
